bk_ida/gccida/g2/expand_function_start
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/function.c:6974:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/function.c:6977:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *result; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/function.c:6988:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *pending_sizes; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/function.c:6991:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/function.c:7074:22: error: use of undeclared identifier 'machine_mode'
v16 = gen_reg_rtx( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4)); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/function.c:7078:22: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_MEM( ( machine_mode)LOBYTE( subr->decl.result->block.supercontext), v16); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/function.c:7093:32: error: use of undeclared identifier 'machine_mode'
v41->decl.rtl = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)v40 + 2)); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/function.c:7138:25: error: use of undeclared identifier 'machine_mode'
v35 = memory_address( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v34); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/function.c:7139:22: error: use of undeclared identifier 'machine_mode'
v36 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v35); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/function.c:7164:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)rtl->fld[0]; 
                       ^~~~~~~~~~~
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_function_start/src/obj/function.o] Error 1
